tests/stable/function/compile_fail/precondition_missing.stderr
error[E0063]: missing field `_custom_must_20be_20baz` in initializer of `foo`
 --> $DIR/precondition_missing.rs:9:5
  |
9 |     foo()
  |     ^^^ missing `_custom_must_20be_20baz`
